--- a/stylesheet.css
+++ b/stylesheet.css
@@ -10,7 +10,7 @@ body {
     font-weight: 400;
 
     position: relative;
-    width: 100%;
+    max-width: 100%;
     height: 100%;
     margin: auto;
 
@@ -38,7 +38,7 @@ img { /*Disables image dragging*/
 
 .container {
     margin: 0 auto;
-    width: 100%;
+    max-width: 100%;
     padding: auto;
 }
 
@@ -90,7 +90,7 @@ nav a::before {
     content: '';
     display: block;
     height: 5px;
-    width: 100%;
+    max-width: 100%;
     background-color: #444;
 
     position:absolute;
@@ -107,11 +107,9 @@ nav a:hover::before {
 
 /*Footer*/
 .footer {
-
-    position: absolute;
-    width: 100%;
+    position: relative;
+    max-width: 100%;
     height: 650px;
-    left: 0px;
     top: 1060px;
 
     background: #F3F3F3;
@@ -124,14 +122,15 @@ nav a:hover::before {
 }
 .footer li{
     display: inline-block;
-    padding-left: 5%;
+    padding-left: 2.5%;
     padding-right: 15%;
 }
 
 
+
 #footer-links {
     position: relative;
-    width: 100%;
+    max-width: 100%;
     height: 84px;
     left: 0px;
 
@@ -140,10 +139,10 @@ nav a:hover::before {
 }
 
 #footer-links ul {
-    position: relative;
-    left: 35%;
-    top: 40%;
-    bottom: 17.57%;
+    position: absolute;
+    max-width: 100%;
+    left: 33%;
+    bottom: 20%;
 
     font-family: Inter;
     font-style: normal;
@@ -167,7 +166,7 @@ nav a:hover::before {
 #img-container img {
     max-width: 300px;
     height: auto;
-    padding-left: 42%;
+    padding-left: 40%;
     top: 20%;
 }
 
@@ -179,7 +178,7 @@ nav a:hover::before {
     position: relative;
     width: 120px;
     height: 24px;
-    left: 40%;
+    left: 38%;
     top: 50%;
 
 }
@@ -187,8 +186,9 @@ nav a:hover::before {
     display: inline;
     padding-left: 5px;
     padding-right: 5px;
+}
 
-}#footer-paragraph {
+#footer-paragraph {
      position: absolute;
      left: 20.1%;
      right: 20.1%;
