--- a/stylesheet.css
+++ b/stylesheet.css
@@ -13,7 +13,7 @@ body {
     max-width: 100%;
     height: 100%;
     margin: auto;
-
+2
     background: #FFFFFF;
 
     -webkit-touch-callout: none; /* iOS Safari */
@@ -55,7 +55,7 @@ header::after {
 
 .logo {
     float: left;
-    padding: 10px 0;
+    padding: 10px 40px;
     height: 80px;
 }
 
@@ -65,7 +65,7 @@ nav {
 
 nav ul {
     margin: 0;
-    padding: 0;
+    padding: 0 60px;
     list-style-type: none;
 }
 
