--- a/stylesheet.css
+++ b/stylesheet.css
@@ -13,7 +13,6 @@ body {
     max-width: 100%;
     height: 100%;
     margin: auto;
-2
     background: #FFFFFF;
 
     -webkit-touch-callout: none; /* iOS Safari */
@@ -40,7 +39,7 @@ img { /*Disables image dragging*/
 .container {
     margin: 0 auto;
     max-width: 100%;
-    padding: auto;
+
 }
 
 header {
@@ -105,6 +104,85 @@ nav a::before {
 nav a:hover::before {
     width:100%;
 }
+
+
+/*STORE PAGE*/
+
+.shop-items {
+    width: 80%;
+    height: 1000px;
+    border-style: solid;
+    border-color: green;
+    margin: 0 auto;
+}
+
+.shop-item {
+    position: relative;
+    left: 2.5%;
+    float: left;
+
+    margin: 20px;
+    height: 25em;
+
+    border-style: solid;
+    border-color: green;
+}
+
+.shop-item img {
+    display: flex;
+    width: 20em;
+    position: relative;
+}
+.shop-item-details {
+    width: 200px;
+    height: 100px;
+    display: inline-block;
+    align-items: center;
+    border-style: solid;
+    border-color: green;
+}
+.shop-item-title {
+    font-size: 35px;
+
+}
+
+/*END OF STORE PAGE*/
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 /*Footer*/
@@ -203,5 +281,4 @@ nav a:hover::before {
      text-align: center;
 
      color: #000000;
-
  }
