Made the images darker to make the white text pop out and make them transition between darkened and not

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -372,6 +372,12 @@ nav a:hover::before {
 .game-box img {
     width: 30rem;
     height: auto;
+    transition: 0.5s;
+    filter: brightness(50%);
+}
+.game-box:hover img {;
+    transition: 0.5s;
+    filter: brightness(100%);
 }
 .Text-placement {
     Position: relative;
