--- a/stylesheet.css
+++ b/stylesheet.css
@@ -57,6 +57,8 @@ header::after {
     float: left;
     padding: 10px 40px;
     height: 80px;
+
+
 }
 
 nav {
@@ -446,7 +448,6 @@ nav a:hover::before {
     width: 78%;
     height: auto;
     margin: 0 auto;
-
 }
 
 .shop-item {
@@ -502,7 +503,7 @@ nav a:hover::before {
     background-color: #4CAF50; /* Green */
     border: none;
     color: white;
-    padding: 10px ;
+    padding: 10px;
 
     text-align: center;
     text-decoration: none;
@@ -517,6 +518,57 @@ nav a:hover::before {
     transition: 0.3s;
 }
 
+
+/*stored featured*/
+
+
+.featured-title {
+
+    width: 80%;
+    margin: 0 auto;
+
+
+
+    font-size: 1.5rem;
+    font-weight: 600;
+    text-align: center;
+    font-family: 'Press Start 2P', cursive;
+    padding: 1.5rem 0;
+}
+.featured-shop-items {
+    width: 80vw;
+    height: 100%;
+    margin: 0 auto;
+
+    display: grid;
+    grid-template-columns: repeat(2, auto);
+
+    box-shadow: 3px 3px 6px -1px rgba(0,0,0,0.75);
+    -webkit-box-shadow: 3px 3px 6px -1px rgba(0,0,0,0.75);
+    -moz-box-shadow: 3px 3px 6px -1px rgba(0,0,0,0.75);
+}
+.featured-details {
+    position: relative;
+    margin: auto;
+    text-align: center;
+
+    width: auto;
+    height: 20vw;
+    display: grid;
+}
+.featured.shop-item-title {
+    font-size: 5vw;
+}
+.featured.shop-item-price {
+    font-size: 2vw;
+}
+
+
+.featured-shop-items img {
+    display: block;
+    width: 40vw;
+    height: auto;
+}
 
 /*END OF STORE PAGE*/
 
