Added a Contact form

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -617,6 +617,7 @@ input[type=submit]:hover {
     background-color: #f2f2f2;
     padding: 20px;
 }
+/*End of Contact form*/
 /*END OF CONTACT PAGE*/
 
 
