--- a/stylesheet.css
+++ b/stylesheet.css
@@ -612,7 +612,7 @@ input[type=submit]:hover {
 }
 
 /* Add a background color and some padding around the form */
-.container {
+.ContactForm {
     border-radius: 5px;
     background-color: #f2f2f2;
     padding: 20px;
