--- a/stylesheet.css
+++ b/stylesheet.css
@@ -125,6 +125,29 @@ nav a:hover::before {
 }
 
 
+
+
+
+/*Home*/
+
+
+.parallax {
+    background: url("/assets/parallax_background.png") repeat fixed 100%;
+}
+
+
+.parallax-inner {
+    padding-top: 10%;
+    padding-bottom: 10%;
+}
+
+.parallax-inner h1 {
+
+    text-align: center;
+    font-size: 500%;
+    color: white;
+}
+
 /*Billing form*/
 .billing-form {
 
@@ -173,14 +196,14 @@ nav a:hover::before {
 }
 
 .form-control input {
-    border: 2px solid grey;
+    border: 1px solid lightgrey;
     border-radius: 4px;
     display: block;
     padding: 10px;
     margin: 0 0 10px 0;
     font-family: inherit;
     font-size: 14px;
-    width: 100%;
+    width: 95%;
 }
 
 .form-control.success input {
@@ -204,7 +227,7 @@ nav a:hover::before {
 .form-control i {
     position: absolute;
     top: 36px;
-    right: -10px;
+    right: 5px;
     font-size: 25px;
     visibility: hidden;
 }
