--- a/stylesheet.css
+++ b/stylesheet.css
@@ -266,8 +266,39 @@ nav a:hover::before {
 
 
 
-
 /*billing form end*/
+
+
+
+/*Staff*/
+.Staff {
+    display: flex;
+    flex-direction: column;
+}
+.topStaff {
+    margin: 10px;
+    padding: 20px;
+    font-size: 30px;
+    display: flex;
+}
+.bottomStaff{
+    display: flex;
+    flex-wrap: wrap;
+}
+.mainStaff {
+    flex: 40%;
+    padding: 20px;
+}
+.sideStaff {
+    flex: 60%;
+    padding: 20px;
+    display: flex;
+    flex-direction: column;
+}
+.columnStaff{
+    float: left;
+    padding: 5px;
+}
 
 
 
@@ -392,7 +423,6 @@ nav a:hover::before {
 }
 
 .image-section {
-
     display: grid;
     grid-template-columns: repeat(2, minmax(250px,1fr));
     width: 78%;
