Home page parallax effect

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -295,32 +295,16 @@ nav a:hover::before {
 
 /*Staff*/
 .Staff {
-    display: flex;
-    flex-direction: column;
+    width: 95%;
+
+    margin: 0 auto;
 }
-.topStaff {
-    margin: 10px;
-    padding: 20px;
-    font-size: 30px;
-    display: flex;
-}
-.bottomStaff{
-    display: flex;
-    flex-wrap: wrap;
-}
-.mainStaff {
-    flex: 40%;
-    padding: 20px;
-}
-.sideStaff {
-    flex: 60%;
-    padding: 20px;
-    display: flex;
-    flex-direction: column;
-}
-.columnStaff{
-    float: left;
-    padding: 5px;
+
+.bottomStaff {
+
+    display: grid;
+
+    grid-template-columns: repeat(2, 696px);
 }
 
 
