--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,7 +1,12 @@
 @import url('https://fonts.googleapis.com/css?family=Work+Sans:400,600');
 @import url('https://fonts.googleapis.com/css2?family=Anton&family=Francois+One&family=Press+Start+2P&display=swap');
 
-
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    scroll-behavior: smooth;
+}
 
 body {
     font-family: "Work Sans", sans-serif;
@@ -42,82 +47,79 @@ section {
 
 }
 
-header {
-    background: #b1fc5c;
-}
-
-header::after {
-    content: '';
-    display: table;
-    clear: both;
-}
-
-.logo {
-    float: left;
-    padding: 10px 40px;
-    height: 80px;
-
-
-}
-
-nav {
-    float: right;
-}
-
-nav ul {
+* {
     margin: 0;
-    padding: 0 60px;
-    list-style-type: none;
+    padding: 0;
+    box-sizing: border-box;
+    scroll-behavior: smooth;
 }
 
-nav li {
-    display: inline-block;
-    right: 20px;
-    margin-left: 80px;
-    padding-top: 40px;
-
+header {
     position: relative;
+    left: 0;
+    width: 100%;
+
+    padding: 0 100px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+
+    background: #172339;
+    z-index: 100;
+
+    box-shadow: 0px 3px 16px -5px rgba(0,0,0,0.61);
+    -webkit-box-shadow: 0px 3px 16px -5px rgba(0,0,0,0.61);
+    -moz-box-shadow: 0px 3px 16px -5px rgba(0,0,0,0.61);
+
+    font-size: 1vw;
+    font-family: 'Francois One', sans-serif;
 }
 
-nav a {
-    color: #444;
+header img{
+    width: 30%;
+}
+
+header ul {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+header ul li {
+    list-style: none;
+    margin-left: 20px;
+
+    text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+}
+
+header ul li a {
     text-decoration: none;
-    text-transform: uppercase;
+    padding: 6px 15px;
+    color: white;
+    border-radius: 20px;
+    transition: 300ms;
 }
 
-nav a:hover {
-    color: rgb(250, 81, 2);
+header ul li a:hover, header ul li a.active {
+    background: white;
+    color: #447caa;
 }
-
-nav a::before {
-    content: '';
-    display: block;
-    height: 5px;
-    max-width: 100%;
-    background-color: #444;
-
-    position:absolute;
-    top: 0;
-    width: 0%;
-
-    transition: all ease-in-out 150ms;
-}
-
-nav a:hover::before {
-    width:100%;
-}
-
 
 #cart-icon {
     position: relative;
-    top: 0.2rem;
-    font-size:1.8rem;
+    top: 0.2vw;
+    font-size:1.8vw;
     cursor: pointer;
+    color: white;
+
 }
+
+
 .bag-quantity {
     position: relative;
     text-align: center;
-    color: black;
+    color: white;
+    font-size:1vw;
     font-weight: 600;
     font-family: 'Press Start 2P', cursive;
 
@@ -178,7 +180,7 @@ nav a:hover::before {
     margin: 0 0 10px 0;
     font-family: inherit;
     font-size: 14px;
-    width: 95%;
+    width: 100%;
 }
 
 .form-control.success input {
@@ -210,7 +212,7 @@ nav a:hover::before {
 .form-control small {
     position: absolute;
     bottom: 0;
-    right: -15px;
+    right: 0;
     visibility: hidden;
 }
 .form-control.error small {
@@ -520,7 +522,7 @@ nav a:hover::before {
 
 
 .shop-item-button {
-    background-color: #4CAF50; /* Green */
+    background-color: #447caa; /* Green */
     border: none;
     color: white;
     padding: 10px;
