--- a/stylesheet.css
+++ b/stylesheet.css
@@ -272,19 +272,25 @@ header ul li a:hover, header ul li a.active {
 
 /*Staff*/
 .Staff {
-    width: 95%;
-
+    width: 70%;
     margin: 0 auto;
 }
 
-.bottomStaff {
+.mainStaff {
+    width: 15vw;
+    max-height: 10vw;
 
+    margin: 10px;
+}
+
+.bottomStaff {
     display: grid;
-    grid-template-columns: repeat(2, minmax(10px, 696px));
+    grid-template-columns: repeat(2, minmax(10px, 20vw));
 }
 .bottomStaff img {
     width: 100%;
-    height: auto;
+    height: 100%;
+    object-fit: cover;
 }
 
 .sideStaff {
