Edited Staff, changed them to be more spaced out, need to align the images with the text now

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -272,7 +272,7 @@ header ul li a:hover, header ul li a.active {
 
 /*Staff*/
 .Staff {
-    width: 70%;
+    width: 75%;
     margin: 0 auto;
 }
 
@@ -280,12 +280,12 @@ header ul li a:hover, header ul li a.active {
     width: 15vw;
     max-height: 10vw;
 
-    margin: 10px;
+    margin: 40px;
 }
 
 .bottomStaff {
     display: grid;
-    grid-template-columns: repeat(2, minmax(10px, 20vw));
+    grid-template-columns: repeat(2, minmax(30px, 18vw));
 }
 .bottomStaff img {
     width: 100%;
@@ -298,7 +298,7 @@ header ul li a:hover, header ul li a.active {
     width: 50vw;
     font-size: 0.7vw;
 }
-
+/*End of Staff*/
 
 /*cart*/
 .cart {
