--- a/homeStyle.css
+++ b/homeStyle.css
@@ -29,7 +29,7 @@ header {
     -webkit-box-shadow: 0px 3px 16px -5px rgba(0,0,0,0.61);
     -moz-box-shadow: 0px 3px 16px -5px rgba(0,0,0,0.61);
 
-
+    z-index: 100;
     font-size: 1vw;
     font-family: 'Francois One', sans-serif;
 }
