--- a/stylesheet.css
+++ b/stylesheet.css
@@ -281,7 +281,7 @@ header ul li a:hover, header ul li a.active {
     width: 15vw;
     max-height: 10vw;
 
-    margin: 40px;
+    margin-bottom: 40px;
 }
 
 .bottomStaff {
