--- a/stylesheet.css
+++ b/stylesheet.css
@@ -450,32 +450,32 @@ header ul li a:hover, header ul li a.active {
     flex-grow: 4;
 }
 /**/
-.mainStaff {
-    width: 15vw;
-    max-height: 10vw;
-    margin-bottom: 40px;
-}
+/*.mainStaff {*/
+/*    width: 15vw;*/
+/*    max-height: 10vw;*/
+/*    margin-bottom: 40px;*/
+/*}*/
 
-.bottomStaff {
-    display: grid;
-    grid-template-columns: repeat(2, minmax(30px, 18vw));
-}
-.bottomStaff img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-}
+/*.bottomStaff {*/
+/*    display: grid;*/
+/*    grid-template-columns: repeat(2, minmax(30px, 18vw));*/
+/*}*/
+/*.bottomStaff img {*/
+/*    width: 100%;*/
+/*    height: 100%;*/
+/*    object-fit: cover;*/
+/*}*/
 
-.sideStaff {
-    margin: 0 5vw;
-    width: 50vw;
-    font-size: 0.7vw;
-}
+/*.sideStaff {*/
+/*    margin: 0 5vw;*/
+/*    width: 50vw;*/
+/*    font-size: 0.7vw;*/
+/*}*/
 .staffColumn {
     float: left;
     width: 33.3%;
     margin-bottom: 16px;
-    padding: 0.8px;
+    padding: 0 8px;
 }
 @media screen and (max-width: 650px) {
     .staffColumn {
@@ -486,17 +486,17 @@ header ul li a:hover, header ul li a.active {
 .staffCard {
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
 }
-.staffCard img {
-    width: 50%;
-    height: auto;
-    position: relative;
-    z-index: 10;
-    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-}
+/*.staffCard img {*/
+/*    width: 50%;*/
+/*    height: auto;*/
+/*    position: relative;*/
+/*    z-index: 10;*/
+/*    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);*/
+/*}*/
 .staffContainer {
     padding: 0 16px;
 }
-.staffContainer::after, .row::after {
+.staffContainer::after, .staffRow::after {
     content: "";
     clear: both;
     display: table;
@@ -516,7 +516,7 @@ header ul li a:hover, header ul li a.active {
     width: 100%;
 }
 .staffButton:hover {
-    background-colour: #000;
+    background-colour: #555;
 }
 /*End of Staff*/
 
