--- a/homeStyle.css
+++ b/homeStyle.css
@@ -109,10 +109,23 @@ section img#darkerBlueTree {
     text-shadow: 2px 2px 5px rgba(150, 150, 150, 1);
 }
 
+
+
 .sec {
     position: relative;
     padding: 100px;
+    height: auto;
     background: #447caa;
+}
+.sec::before {
+    content: '';
+    position: absolute;
+    bottom: -10%;
+    right: 0;
+    width: 100%;
+    height: 10%;
+    background: linear-gradient(to bottom, #447caa, transparent);
+    z-index: 10000;
 }
 
 .sec h2 {
@@ -122,6 +135,157 @@ section img#darkerBlueTree {
 }
 
 .sec p {
-    font-size: 1em;
+    font-size: 1.5em;
     color: white;
 }
+
+
+.slide-section {
+    width: 95%;
+    height: auto;
+    margin: 8% auto;
+
+
+    position: relative;
+    background: white;
+
+    border-radius: 10px;
+    padding: 4%;
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(696px, 1fr));
+    grid-gap: 12%;
+
+    box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.25);
+    -webkit-box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.25);
+    -moz-box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.25);
+
+}
+
+.slideshow {
+    position: relative;
+    background: white;
+    width: 800px;
+    height: 500px;
+    border-radius: 10px;
+    overflow: hidden;
+
+    box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.25);
+    -webkit-box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.25);
+    -moz-box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.25);
+}
+
+
+
+.slides {
+    width: 500%;
+    height: 500px;
+    display: flex;
+}
+
+.slides input {
+    display: none;
+}
+
+
+.slide {
+    width: 20%;
+    transition: 2s;
+}
+
+.slide img {
+    width: 800px;
+    height: 500px;
+}
+
+.slide-details {
+    padding: 20% 10%;
+}
+
+.slide-details h2 {
+    font-size: 5em;
+    text-align: center;
+}
+
+.slide-text {
+
+    font-size: 2em;
+    margin: 10% 0 0 0;
+    text-align: center;
+}
+
+/*manual slides*/
+
+.navigation-manual {
+    position: absolute;
+    width: 800px;
+    margin-top: -40px;
+    display: flex;
+    justify-content: center;
+
+}
+
+.manual-btn {
+    border: 2px solid #FFF;
+    padding: 5px;
+    border-radius: 10px;
+    cursor: pointer;
+    transition: 1s;
+
+}
+
+.manual-btn:not(:last-child){
+    margin-right: 40px;
+}
+
+.manual-btn:hover {
+
+    background: white;
+}
+
+
+#radio1:checked ~.first {
+    margin-left: 0;
+}
+
+#radio2:checked ~.first {
+    margin-left: -20%;
+}
+
+#radio3:checked ~.first {
+    margin-left: -40%;
+}
+
+/*auto slideshow*/
+
+.navigation {
+    position: absolute;
+    display: flex;
+    width: 800px;
+    justify-content: center;
+    margin-top: 460px;
+}
+
+.navigation div {
+    border: 2px solid #FFF;
+    padding: 5px;
+    border-radius: 10px;
+    transition: 1s;
+}
+
+.navigation div:not(:last-child) {
+    margin-right: 40px;
+}
+
+ #radio1:checked ~ .navigation .auto-btn1 {
+     background: #FFF;
+ }
+ #radio2:checked ~ .navigation .auto-btn2 {
+     background: #FFF;
+ }
+ #radio3:checked ~ .navigation .auto-btn3 {
+     background: #FFF;
+ }
+
+
+
+
