--- a/stylesheet.css
+++ b/stylesheet.css
@@ -440,16 +440,16 @@ header ul li a:hover, header ul li a.active {
 /*end card styles*/
 
 
-/*Staff*/
+/*Start of About page*/
 .Staff {
     width: 75%;
     margin: 0 auto;
     text-align: center;
 }
-.staffName {
-    flex-grow: 4;
-}
-/**/
+/*.staffName {*/
+/*    flex-grow: 4;*/
+/*}*/
+
 /*.mainStaff {*/
 /*    width: 15vw;*/
 /*    max-height: 10vw;*/
@@ -471,12 +471,22 @@ header ul li a:hover, header ul li a.active {
 /*    width: 50vw;*/
 /*    font-size: 0.7vw;*/
 /*}*/
+.staffRow {
+    position: relative;
+    width:90%;
+    margin: 0 auto;
+
+    padding: 1rem 0;
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(360px, 1fr));
+    grid-gap: 5rem;
+}
+
 .staffColumn {
-    float: left;
-    width: 33.3%;
-    margin-bottom: 16px;
     padding: 0 8px;
 }
+
+
 @media screen and (max-width: 650px) {
     .staffColumn {
         width: 100%;
@@ -485,6 +495,14 @@ header ul li a:hover, header ul li a.active {
 }
 .staffCard {
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    width: 100%;
+    height: 696px;
+}
+
+.staffCard img {
+    width: 100%;
+    height: 50%;
+    object-fit: cover;
 }
 /*.staffCard img {*/
 /*    width: 50%;*/
@@ -493,14 +511,21 @@ header ul li a:hover, header ul li a.active {
 /*    z-index: 10;*/
 /*    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);*/
 /*}*/
+
+
 .staffContainer {
     padding: 0 16px;
+    position: relative;
+    margin: 50px 20px 20px 20px;
+    height: 60%;
 }
+
 .staffContainer::after, .staffRow::after {
     content: "";
     clear: both;
     display: table;
 }
+
 .staffTitle {
     color: grey;
 }
@@ -514,6 +539,10 @@ header ul li a:hover, header ul li a.active {
     text-align: center;
     cursor: pointer;
     width: 100%;
+
+    position: relative;
+    top: 50px
+
 }
 .staffButton:hover {
     background-colour: #555;
@@ -629,10 +658,6 @@ header ul li a:hover, header ul li a.active {
 }
 
 /* end of header*/
-
-
-
-
 
 /* Styling for Game */
 
@@ -821,17 +846,98 @@ header ul li a:hover, header ul li a.active {
 /*END OF STORE PAGE*/
 
 /*START OF CONTACT PAGE*/
-.StaffContactImages {
-    width: 100%;
-    margin: 5px;
-    height: 25em;
+.contact-container  {
+    text-align: center;
+    margin-bottom: 20px;
+    text-transform: uppercase;
+    letter-spacing: 3px;
+    font-family: 'Francois One', sans-serif;
+    display: flex;
+    flex-direction: column;
 }
-.StaffContactText {
+.contact-header {
+    padding: 20px 10px 10px 10px;
+    /*padding-left: 10px;*/
+    /*padding-right: 10px;*/
+    border-radius: 0px;
+    box-shadow: 0px 0px 1px -2px rgb(23,35,57);
+    /*background: #172339;*/
+    /*color: #F8ECE9;*/
 }
-h4 {
-    display: inline;
+.contact-text {
+    margin: 1%;
+    padding: 1%;
+    box-sizing: border-box;
+    outline: none;
 }
+
 /*Start of contact form*/
+body{
+    background: white;
+}
+
+.wrapper{
+    position: relative;
+    /*top: 1000%;*/
+    /*left: 1000%;*/
+    /*transform: translate(-50%,-50%);*/
+    max-width: 350px;
+    margin: 5% auto 5% auto;
+    width: 100%;
+    height: auto;
+    background: #fff;
+    padding: 25px;
+    border-radius: 5px;
+    box-shadow: 0px 0px 1px 1px rgb(23,35,57);
+}
+
+.wrapper h2{
+    text-align: center;
+    margin-bottom: 20px;
+    text-transform: uppercase;
+    letter-spacing: 3px;
+    color: #332902;
+}
+
+.wrapper .input_field{
+    margin-bottom: 10px;
+}
+
+.wrapper .input_field input[type="text"],
+.wrapper textarea{
+    border: 1px solid #e0e0e0;
+    width: 100%;
+    padding: 10px;
+}
+
+.wrapper textarea{
+    resize: none;
+    height: 80px;
+}
+
+.wrapper .btn input[type="submit"]{
+    border: 0px;
+    margin-top: 15px;
+    padding: 10px;
+    text-align: center;
+    width: 100%;
+    background: #171939d9;
+    color: #F8ECE9;
+    text-transform: uppercase;
+    letter-spacing: 5px;
+    font-weight: bold;
+    border-radius: 25px;
+    cursor: pointer;
+}
+
+#error_message{
+    margin-bottom: 20px;
+    background: #FF0004;
+    padding: 0px;
+    text-align: center;
+    font-size: 14px;
+    transition: all 0.5s ease;
+}
 .ContactForm input[type=text], select, textarea {
     width: 100%; /* Full width */
     padding: 12px; /* Some padding */
@@ -865,7 +971,13 @@ h4 {
     padding: 20px;
 }
 /*End of Contact form*/
+
 /*END OF CONTACT PAGE*/
+
+
+
+
+
 
 
 
