Moved the games images down a little and modified the contact page

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -681,6 +681,7 @@ header ul li a:hover, header ul li a.active {
     box-sizing: border-box;
 }
 .gallery {
+    padding-top: 40px;
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
     width: 60%;
