--- a/stylesheet.css
+++ b/stylesheet.css
@@ -681,7 +681,8 @@ header ul li a:hover, header ul li a.active {
     box-sizing: border-box;
 }
 .gallery {
-    padding-top: 40px;
+    padding-top: 50px;
+    padding-bottom: 50px;
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
     width: 60%;
