Added footer, finished home page

--- a/homeStyle.css
+++ b/homeStyle.css
@@ -557,6 +557,7 @@ section img#darkerBlueTree {
     background: #447caa;
     border-radius: 4px;
     margin-top: 10px;
+    font-family: 'Francois One', sans-serif;
     text-decoration: none;
     font-weight: 600;
     color: #111;
