--- a/stylesheet.css
+++ b/stylesheet.css
@@ -101,7 +101,7 @@ header ul li a {
     transition: 300ms;
 }
 
-header ul li a:hover, header ul li a.active {
+header ul li a:hover, header ul li a.actives {
     background: white;
     color: #447caa;
 }
@@ -457,34 +457,13 @@ header ul li a:hover, header ul li a.active {
 /*Start of About page*/
 .Staff {
     width: 75%;
-    margin: 0 auto;
+    margin: 10% auto;
     text-align: center;
+    border-radius: 20px;
+    box-shadow: -8px 10px 0px 0px rgba(0,0,0,0.17);
+    -webkit-box-shadow: -8px 10px 0px 0px rgba(0,0,0,0.17);
+    -moz-box-shadow: -8px 10px 0px 0px rgba(0,0,0,0.17);
 }
-/*.staffName {*/
-/*    flex-grow: 4;*/
-/*}*/
-
-/*.mainStaff {*/
-/*    width: 15vw;*/
-/*    max-height: 10vw;*/
-/*    margin-bottom: 40px;*/
-/*}*/
-
-/*.bottomStaff {*/
-/*    display: grid;*/
-/*    grid-template-columns: repeat(2, minmax(30px, 18vw));*/
-/*}*/
-/*.bottomStaff img {*/
-/*    width: 100%;*/
-/*    height: 100%;*/
-/*    object-fit: cover;*/
-/*}*/
-
-/*.sideStaff {*/
-/*    margin: 0 5vw;*/
-/*    width: 50vw;*/
-/*    font-size: 0.7vw;*/
-/*}*/
 .staffRow {
     position: relative;
     width:90%;
@@ -513,18 +492,22 @@ header ul li a:hover, header ul li a.active {
     height: 696px;
 }
 
+.topStaff {
+    width: 90%;
+    margin: 0 auto;
+    border-bottom: 1px solid black;
+}
+
+.topStaff h3 {
+    padding: 0 15%;
+    font-size: 1em;
+}
+
 .staffCard img {
     width: 100%;
     height: 50%;
     object-fit: cover;
 }
-/*.staffCard img {*/
-/*    width: 50%;*/
-/*    height: auto;*/
-/*    position: relative;*/
-/*    z-index: 10;*/
-/*    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);*/
-/*}*/
 
 
 .staffContainer {
@@ -582,7 +565,7 @@ header ul li a:hover, header ul li a.active {
     transition: 0.3s;
 }
 
-.cart.active {
+.cart.actives {
     right: 0;
 }
 
@@ -676,7 +659,7 @@ header ul li a:hover, header ul li a.active {
 /* Styling for Game */
 
 .game {
-    margin: 0;
+    margin: 10px;
     padding: 0;
     box-sizing: border-box;
 }
@@ -1346,7 +1329,6 @@ body{
     margin-bottom: 5px;
 }
 
-/* If you don't want the footer to be responsive, remove these media queries */
 
 @media (max-width: 880px) {
 
@@ -1367,4 +1349,121 @@ body{
         margin-left: 0;
     }
 
+}
+
+
+
+/*Support page*/
+.faq-heading{
+    border-bottom: #777;
+    padding: 20px 60px;
+}
+.faq-container{
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+}
+.hr-line{
+    width: 60%;
+    margin: auto;
+
+}
+/* Style the buttons that are used to open and close the faq-page body */
+.faq-page {
+    /* background-color: #eee; */
+    color: #444;
+    cursor: pointer;
+    padding: 30px 20px;
+    width: 60%;
+    border: none;
+    outline: none;
+    transition: 0.4s;
+    margin: auto;
+}
+.faq-body{
+    margin: auto;
+    /* text-align: center; */
+    width: 50%;
+    padding: auto;
+
+}
+
+/* Add a background color to the button if it is clicked on (add the .active class with JS), and when you move the mouse over it (hover) */
+.active,
+.faq-page:hover {
+    background-color: #F9F9F9;
+}
+/* Style the faq-page panel. Note: hidden by default */
+.faq-body {
+    padding: 0 18px;
+    background-color: white;
+    display: none;
+    overflow: hidden;
+}
+.faq-page:after {
+    content: '\02795';
+    /* Unicode character for "plus" sign (+) */
+    font-size: 13px;
+    color: #777;
+    float: right;
+    margin-left: 5px;
+}
+.active:after {
+    content: "\2796";
+    /* Unicode character for "minus" sign (-) */
+}
+
+/* CSS for the ticket*/
+
+.ticket-form {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%) scale(1);
+    transition: ALL 0.25s ease-out;
+    background: #447caa;
+    padding: 20px;
+
+}
+
+.ticket-form h2 {
+    text-align: center;
+}
+
+.ticket-div .submit-btn {
+    display: flex;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.ticket-modal {
+    display: none; /* Hidden by default */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0,0.8); /* Black w/ opacity */
+}
+
+.frm-modal.open {
+    opacity: 1;
+    pointer-events: all;
+}
+
+.modal-frm {
+    position: absolute;
+    height: 50%;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%) scale(0.5);
+    transition: ALL 0.25s ease-out;
+}
+
+
+.modal-frm.open {
+    transform: translate(-50%, -50%) scale(1);
 }
