Changed contact page to match footer details

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -544,7 +544,7 @@ header ul li a:hover, header ul li a.actives {
 .staffButton:hover {
     background-colour: #555;
 }
-/*End of Staff*/
+/*End of About*/
 
 /*cart*/
 .cart {
