--- a/stylesheet.css
+++ b/stylesheet.css
@@ -899,6 +899,7 @@ transform: translate(-50%, -50%) scale(1);
 
 /*START OF CONTACT PAGE*/
 .contact-container  {
+    position: relative;
     text-align: center;
     margin-bottom: 20px;
     text-transform: uppercase;
@@ -907,14 +908,21 @@ transform: translate(-50%, -50%) scale(1);
     display: flex;
     flex-direction: column;
 }
+.Map-Position {
+    overflow:hidden;
+    padding-bottom:25%;
+    /*position:relative;*/
+    height:0;
+}
+.Map-Position iframe{
+    left:0;
+    top:0;
+    height:32%;
+    width:100%;
+    position:absolute;
+}
 .contact-header {
-    padding: 20px 10px 10px 10px;
-    /*padding-left: 10px;*/
-    /*padding-right: 10px;*/
-    border-radius: 0px;
-    box-shadow: 0px 0px 1px -2px rgb(23,35,57);
-    /*background: #172339;*/
-    /*color: #F8ECE9;*/
+    /*padding: 10px 10px 10px 10px;*/
 }
 .contact-text {
     margin: 1%;
